--- a/index.html
+++ b/index.html
@@ -5,9 +5,38 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Password generator</title>
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
   <link rel="stylesheet" href="main.css">
 </head>
 <body>
+   <div class="generator">
+    <h1>Password generator</h1>
+    <label for="password-wrap">
+      <input id="password" type="text" readonly placeholder="Generate a password">
+      <button class="material-symbols-outlined" id="copy">content_copy</button>
+    </label>
+    <label>
+      <span>Password length</span>
+      <input type="number" id="length" value="16">
+    </label>
+    <label>
+      <span>Include uppercase letters</span>
+      <input type="checkbox" id="uppercase" checked>
+    </label>
+    <label>
+      <span>Include lowercase letters</span>
+      <input type="checkbox" id="lowercase" checked>
+    </label>
+    <label>
+      <span>Include numbers</span>
+      <input type="checkbox" id="numbers" checked>
+    </label>
+    <label>
+      <span>Include symbors</span>
+      <input type="checkbox" id="symbols" checked>
+    </label>
+    <button id="generate" type="submit">Generate password</button>
+   </div>
   <script src="main.js"></script>
 </body>
 </html>
