--- a/index.html
+++ b/index.html
@@ -9,34 +9,36 @@
   <link rel="stylesheet" href="main.css">
 </head>
 <body>
-   <div class="generator">
-    <h1>Password generator</h1>
-    <label for="password-wrap">
-      <input id="password" type="text" readonly placeholder="Generate a password">
-      <button class="material-symbols-outlined" id="copy">content_copy</button>
-    </label>
-    <label>
-      <span>Password length</span>
-      <input type="number" id="length" value="16">
-    </label>
-    <label>
-      <span>Include uppercase letters</span>
-      <input type="checkbox" id="uppercase" checked>
-    </label>
-    <label>
-      <span>Include lowercase letters</span>
-      <input type="checkbox" id="lowercase" checked>
-    </label>
-    <label>
-      <span>Include numbers</span>
-      <input type="checkbox" id="numbers" checked>
-    </label>
-    <label>
-      <span>Include symbors</span>
-      <input type="checkbox" id="symbols" checked>
-    </label>
-    <button id="generate" type="submit">Generate password</button>
-   </div>
+  <div class="main">
+    <div class="generator">
+      <h1>Password generator</h1>
+      <label for="password-wrap" class="password-wrap">
+        <input id="password" type="text" readonly placeholder="Generate a password">
+        <button class="material-symbols-outlined" id="copy">content_copy</button>
+      </label>
+      <label>
+        <span>Password length</span>
+        <input type="number" id="length" value="16">
+      </label>
+      <label>
+        <span>Include uppercase letters</span>
+        <input type="checkbox" id="uppercase" checked>
+      </label>
+      <label>
+        <span>Include lowercase letters</span>
+        <input type="checkbox" id="lowercase" checked>
+      </label>
+      <label>
+        <span>Include numbers</span>
+        <input type="checkbox" id="numbers" checked>
+      </label>
+      <label>
+        <span>Include symbors</span>
+        <input type="checkbox" id="symbols" checked>
+      </label>
+      <button id="generate" type="submit">Generate password</button>
+     </div>
+  </div>
   <script src="main.js"></script>
 </body>
 </html>
